[tool.poetry]
name = "all-tnns"
version = "0.1.0"
description = "An implementation of the All-TNNs paper"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.2"
torchvision = "^0.17.2"
matplotlib = "^3.8.4"
tqdm = "^4.66.2"
pydantic = "^2.6.4"
datasets = "^2.18.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
